<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/prl_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/bar"
        layout="@layout/titlebar" />

    <com.chanven.lib.cptr.PtrClassicFrameLayout android:id="@+id/pcfl_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/bar"
        android:background="#f0f0f0"
        xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
        cube_ptr:ptr_duration_to_close="200"
        cube_ptr:ptr_duration_to_close_header="700"
        cube_ptr:ptr_keep_header_when_refresh="true"
        cube_ptr:ptr_pull_to_fresh="false"
        cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
        cube_ptr:ptr_resistance="1.8">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_little_grey" />

    </com.chanven.lib.cptr.PtrClassicFrameLayout>

    <com.hzjytech.operation.widgets.GoTopImageView
        android:id="@+id/iv_to_top"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="12dp"
        android:src="@drawable/icon_top" />
</RelativeLayout>
