...
        android:layout_height="101dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/ll_scan"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/rect_pop_scan_">
...
                android:text="扫一扫" />
        </LinearLayout>

        <include layout="@layout/item_line" />

        <LinearLayout
            android:id="@+id/ll_new_task"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/rect_pop_newtask">
...
